Added Lato font from Google Web Fonts

--- a/src/jade/includes/head.jade
+++ b/src/jade/includes/head.jade
@@ -8,4 +8,5 @@ head
   meta(name='description', content='')
   meta(name='viewport', content='width=device-width,initial-scale=1')
 
+  link(rel='stylesheet', href='http://fonts.googleapis.com/css?family=Lato:400,700,900,400italic')
   link(rel='stylesheet', href='_/styles/screen.css')
