Set up main font-family

--- a/src/sass/settings.scss
+++ b/src/sass/settings.scss
@@ -6,7 +6,7 @@
    Fonts
    ========================================================================== */
 
-    $main-font:$helvetica;
+    $main-font:'Lato',sans-serif;
 
 /*
    Colors
