--- a/src/sass/base/base.scss
+++ b/src/sass/base/base.scss
@@ -8,7 +8,7 @@
     background-color:$body-background-color;
     font-family:$main-font;
     color:$main-text-color;
-    line-height:1.5;
+    line-height:1.35;
   }
 
 /* Base links */
@@ -49,8 +49,14 @@
 /* Typography settings */
 
   h1 {
-    letter-spacing:-1px;
-    font-size:em(36);
-    font-weight:900;
 
+    font-size:rem(30);
+    font-weight:900;
+    letter-spacing:-1px;
+    margin:0;
+  }
+
+  p {
+    font-size:em(18);
+    margin:0 0 rem(12);
   }
