Copy changes and added in my contact information

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -11,4 +11,14 @@ html(lang='en')
 
     h1 Richard Cookson
 
+    ul
+      li
+        a(href='mailto:rich@frobitz.com') rich@frobitz.com
+      li
+        a(href='tel:+447792871698') 07792 871698
+      li
+        a(href='https://goo.gl/maps/lwIkM') Brighton, UK
+
   main(role='main')
+
+    p A front end web developer and interaction designer with fifteen years experience in the industry. My current focus is on the craft of responsive web development.
