Set up basic page layout for now and amended some typgraphy

--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -36,7 +36,7 @@
  * Some modules may have multiple layout settings if they are used in multiple contexts.
  */
 
-
+  @import "layout/page";
 
 /**
  * Modules
