--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -7,18 +7,20 @@ html(lang='en')
 
   body
 
-  header(role='banner')
+  div(id='page')
 
-    h1 Richard Cookson
+    header(role='banner')
 
-    ul
-      li
-        a(href='mailto:rich@frobitz.com') rich@frobitz.com
-      li
-        a(href='tel:+447792871698') 07792 871698
-      li
-        a(href='https://goo.gl/maps/lwIkM') Brighton, UK
+      h1 Richard Cookson
 
-  main(role='main')
+      //- ul
+      //-   li
+      //-     a(href='mailto:rich@frobitz.com') rich@frobitz.com
+      //-   li
+      //-     a(href='tel:+447792871698') 07792 871698
+      //-   li
+      //-     a(href='https://goo.gl/maps/lwIkM') Brighton, UK
 
-    p A front end web developer and interaction designer with fifteen years experience in the industry. My current focus is on the craft of responsive web development.
+    main(role='main')
+
+      p A front end web developer and interaction designer with fifteen years experience in the industry. My current focus is on the craft of responsive web development.
