--- a/src/sass/base/base.scss
+++ b/src/sass/base/base.scss
@@ -8,7 +8,7 @@
     background-color:$body-background-color;
     font-family:$main-font;
     color:$main-text-color;
-    line-height:1.35;
+    line-height:1.25;
   }
 
 /* Base links */
@@ -55,14 +55,13 @@
 /* Typography settings */
 
   h1 {
-
-    font-size:rem(30);
+    font-size:rem(64);
     font-weight:900;
     letter-spacing:-1px;
-    margin:0;
+    margin:0 0 rem(10);
   }
 
   p {
-    font-size:em(18);
+    font-size:rem(21);
     margin:0 0 rem(12);
   }
