--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -12,6 +12,7 @@ html(lang='en')
     header(role='banner')
 
       h1 Richard Cookson
+      h2 A front end web developer and interaction designer
 
       //- ul
       //-   li
