--- a/src/sass/base/base.scss
+++ b/src/sass/base/base.scss
@@ -58,10 +58,14 @@
     font-size:rem(64);
     font-weight:900;
     letter-spacing:-1px;
-    margin:0 0 rem(10);
+    margin:0;
   }
 
+  h2 {
+    font-size:rem(24);
+    margin:0 0 rem(24);
+  }
   p {
-    font-size:rem(21);
-    margin:0 0 rem(12);
+    font-size:rem(18);
+    margin:0 0 rem(18);
   }
