Adjusted role copy and added id for banner

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -9,10 +9,10 @@ html(lang='en')
 
   div(id='page')
 
-    header(role='banner')
+    header(id='banner', role='banner')
 
       h1 Richard Cookson
-      h2 A front end web developer and interaction designer
+      h2 Front end web developer and interaction designer
 
       //- ul
       //-   li
