--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -24,4 +24,4 @@ html(lang='en')
 
     main(role='main')
 
-      p A front end web developer and interaction designer with fifteen years experience in the industry. My current focus is on the craft of responsive web development.
+      p I've worked in the industry for over fifteen years, producing well organised web sites to the highest standards across a wide range of projects and for numerous high profile organisations. My current focus is on responsive web development.
