--- a/src/sass/layout/banner.scss
+++ b/src/sass/layout/banner.scss
@@ -3,5 +3,5 @@
    ========================================================================== */
 
   #banner {
-    margin:rem(90) 0 0;
+    margin-top:rem(90);
   }
