More messing with design of this

--- a/src/sass/layout/banner.scss
+++ b/src/sass/layout/banner.scss
@@ -3,5 +3,5 @@
    ========================================================================== */
 
   #banner {
-    margin-top:rem(90);
+    margin:rem(90) 0;
   }
