--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -13,15 +13,30 @@ html(lang='en')
 
       h1 Richard Cookson
       h2 Front end web developer and interaction designer
-
-      //- ul
-      //-   li
-      //-     a(href='mailto:rich@frobitz.com') rich@frobitz.com
-      //-   li
-      //-     a(href='tel:+447792871698') 07792 871698
-      //-   li
-      //-     a(href='https://goo.gl/maps/lwIkM') Brighton, UK
+      p I've worked in the industry for over fifteen years, producing well organised web sites to the highest standards across a wide range of projects and for numerous high profile organisations. My current focus is on responsive web development and learning Angular.js.
 
     main(role='main')
 
-      p I've worked in the industry for over fifteen years, producing well organised web sites to the highest standards across a wide range of projects and for numerous high profile organisations. My current focus is on responsive web development.
+      //- section
+
+      //-   h2 Skills
+
+      //-   article
+
+      //-     h3(style='display:inline-block') HTML
+      //-     p(style='display:inline-block') Produce semantic, minimalist and W3C standards compliant HTML5 markup with knowledge and experience of working to accessibility coding standards.
+      //-     p Experience using HAML and Jade templating engine.
+
+      //-   article
+
+      //-     h3(style='display:inline-block') CSS
+      //-     p(style='display:inline-block') Coded plain CSS for years with an indepth knowledge of working around the rendering quirks of various browsers.
+      //-     p Currently work with the SASS pre-processor, using Bourbon and Neat mixin libraries.
+      //-     p Use the SMACSS methodology of organising CSS code.
+
+      //-   article
+
+      //-     h3(style='display:inline-block') JavaScript
+      //-     p(style='display:inline-block') Competent JavaScript coder utilising the jQuery library for various user interface enhancements and functionality.
+      //-     p Currently working on an Angular.js project to improve OOP JavaScript skills.
+
