--- a/src/sass/base/base.scss
+++ b/src/sass/base/base.scss
@@ -66,7 +66,14 @@
     font-weight:900;
     margin:0 0 rem(12);
   }
+
+  h3 {
+    font-size:rem(18);
+    font-weight:900;
+    margin:0;
+  }
+
   p {
     font-size:rem(18);
-    margin:0 0 rem(18);
+    margin:0 0 rem(9);
   }
