New layout and added in skills section

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -17,26 +17,29 @@ html(lang='en')
 
     main(role='main')
 
-      //- section
+      section(class='section', id='skills')
 
-      //-   h2 Skills
+        h2 My Skills
 
-      //-   article
+        div
 
-      //-     h3(style='display:inline-block') HTML
-      //-     p(style='display:inline-block') Produce semantic, minimalist and W3C standards compliant HTML5 markup with knowledge and experience of working to accessibility coding standards.
-      //-     p Experience using HAML and Jade templating engine.
+          article(class='skill')
 
-      //-   article
+            h3 HTML
+            p Produce semantic, minimalist and W3C standards compliant HTML5 markup with knowledge and experience of working to accessibility coding standards.
+            p Experience using HAML and Jade templating engine.
 
-      //-     h3(style='display:inline-block') CSS
-      //-     p(style='display:inline-block') Coded plain CSS for years with an indepth knowledge of working around the rendering quirks of various browsers.
-      //-     p Currently work with the SASS pre-processor, using Bourbon and Neat mixin libraries.
-      //-     p Use the SMACSS methodology of organising CSS code.
+          article(class='skill')
 
-      //-   article
+            h3 CSS
+            p Coded plain CSS for years with an indepth knowledge of working around the rendering quirks of various browsers.
+            p Currently work with the SASS pre-processor, using Bourbon and Neat mixin libraries.
+            p Use the SMACSS methodology of organising CSS code.
 
-      //-     h3(style='display:inline-block') JavaScript
-      //-     p(style='display:inline-block') Competent JavaScript coder utilising the jQuery library for various user interface enhancements and functionality.
-      //-     p Currently working on an Angular.js project to improve OOP JavaScript skills.
+          article(class='skill')
+
+            h3(style='display:inline-block') JavaScript
+            p(style='display:inline-block') Competent JavaScript coder utilising the jQuery library for various user interface enhancements and functionality.
+            p Currently working on an Angular.js project to improve OOP JavaScript skills.
+
 
