--- a/src/sass/layout/banner.scss
+++ b/src/sass/layout/banner.scss
@@ -3,5 +3,7 @@
    ========================================================================== */
 
   #banner {
-    margin:rem(90) 0;
+    @include shift(3);
+    @include span-columns(8);
+    margin-top:rem(90);
   }
