Added initial work article content

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -42,4 +42,21 @@ html(lang='en')
             p(style='display:inline-block') Competent JavaScript coder utilising the jQuery library for various user interface enhancements and functionality.
             p Currently working on an Angular.js project to improve OOP JavaScript skills.
 
+      section(class='section', id='work')
+
+        h2 Latest Work
+
+        div
+
+          article(class='work')
+
+            h3 LShift
+            p Coded both the front end templates and set up, customised and themed a Wordpress backend for Lshifts new company web site.
+
+          article(class='work')
+
+            h3 5K
+            p Coded both the initial front end code for 5K's new company web site.
+
+
 
