Removed old test code

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -38,8 +38,8 @@ html(lang='en')
 
           article(class='skill')
 
-            h3(style='display:inline-block') JavaScript
-            p(style='display:inline-block') Competent JavaScript coder utilising the jQuery library for various user interface enhancements and functionality.
+            h3 JavaScript
+            p Competent JavaScript coder utilising the jQuery library for various user interface enhancements and functionality.
             p Currently working on an Angular.js project to improve OOP JavaScript skills.
 
       section(class='section', id='work')
