Updated content in skills and added in contact information markup and content

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -17,28 +17,41 @@ html(lang='en')
 
     main(role='main')
 
+      address(class='address', id='contact-info')
+        ul
+          li
+            abbr(title='Mobile') m:
+              a(href='tel:+447792871698') +44 7792&nbsp;871698
+          li
+            abbr(title='Email') e:
+              a(href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
+          li
+            abbr(title='Address') a:
+              a(href='http://goo.gl/maps/QKat7') Brighton, UK
+
+
       section(class='section', id='skills')
 
-        h2 My Skills
+        h2 Skills
 
         div
 
           article(class='skill')
 
-            h3 HTML
-            p Produce semantic, minimalist and W3C standards compliant HTML5 markup with knowledge and experience of working to accessibility coding standards.
-            p Experience using HAML and Jade templating engine.
+            h3 HTML.
+            p Producing semantic, minimalist and W3C standards compliant HTML5 markup with experience of working to accessibility coding standards.
+            p I've worked with several templating systems including Smarty and Jade, and have carred out integration of code into a variety of CMS systems including Wordpress.
 
           article(class='skill')
 
-            h3 CSS
+            h3 CSS.
             p Coded plain CSS for years with an indepth knowledge of working around the rendering quirks of various browsers.
-            p Currently work with the SASS pre-processor, using Bourbon and Neat mixin libraries.
-            p Use the SMACSS methodology of organising CSS code.
+            p Currently I work with the SASS pre-processor, using Bourbon and Neat mixin libraries.
+            p I use the SMACSS methodology of organising CSS code.
 
           article(class='skill')
 
-            h3 JavaScript
+            h3 JavaScript.
             p Competent JavaScript coder utilising the jQuery library for various user interface enhancements and functionality.
             p Currently working on an Angular.js project to improve OOP JavaScript skills.
 
