--- a/src/sass/base/typography.scss
+++ b/src/sass/base/typography.scss
@@ -2,26 +2,29 @@
    Typography
    ========================================================================== */
 
+/* Headings */
   h1 {
     font-size:rem(64);
     font-weight:900;
     letter-spacing:-1px;
     margin:0;
   }
-
   h2 {
     font-size:rem(24);
     font-weight:900;
     margin:0 0 rem(12);
   }
-
   h3 {
     font-size:rem(18);
     font-weight:700;
     margin:0;
   }
 
+/* Paragraphs */
+
   p {
+    color:#565656;
     font-size:rem(18);
     margin:0 0 rem(9);
   }
+
