--- a/src/sass/layout/address.scss
+++ b/src/sass/layout/address.scss
@@ -3,13 +3,5 @@
    ========================================================================== */
 
   .address {
-    font-style:normal;
-    span {
-      font-weight:700;
-      margin-right:rem(10);
-    }
-    li {
-      display:inline-block;
-      margin-right:rem(30);
-    }
+    margin-bottom:rem(25);
   }
