Header adjustments and divided out the introduction text

--- a/src/sass/layout/intro.scss
+++ b/src/sass/layout/intro.scss
@@ -1,8 +1,8 @@
 /* ==========================================================================
-   Banner
+   Introduction
    ========================================================================== */
 
-  #banner {
-    margin-bottom:rem(50);
-    margin-top:rem(90);
+  .intro {
+    margin-bottom:rem(15);
+    margin-top:rem(25);
   }
