--- a/src/sass/modules/banner.scss
+++ b/src/sass/modules/banner.scss
@@ -3,6 +3,7 @@
    ========================================================================== */
 
   #banner {
-    margin-bottom:rem(50);
-    margin-top:rem(90);
+    h2 {
+      margin-top:rem(-10);
+    }
   }
