--- a/src/sass/screen.scss
+++ b/src/sass/screen.scss
@@ -39,8 +39,10 @@
  * Some modules may have multiple layout settings if they are used in multiple contexts.
  */
 
-  @import "layout/page";
+  @import "layout/address";
   @import "layout/banner";
+  @import "layout/intro";
+  @import "layout/page";
   @import "layout/section";
 
 /**
@@ -49,4 +51,6 @@
  * Define the styles and internal spacing (padding) of modules
  */
 
+  @import "modules/address";
+  @import "modules/banner";
   @import "modules/section-skills";
