Added new content to Latest Projects and Career Highlights

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -56,21 +56,51 @@ html(lang='en')
             p Competent JavaScript coder utilising the jQuery library for various user interface enhancements and functionality.
             p Currently working on an Angular.js project to improve OOP JavaScript skills.
 
-      section(class='section', id='work')
+      section(class='section', id='latest-projects')
 
-        h2 Latest Work
+        h2 Latest Projects
 
         div
 
-          article(class='work')
+          article(class='project')
 
-            h3 LShift
-            p Coded both the front end templates and set up, customised and themed a Wordpress backend for Lshifts new company web site.
+            h3
+              a(href='http://www.lshift.net') www.lshift.net
+            ul
+              li Utilised Grunt, SASS and Jade framework to create prototype templates allowing for rapid, in-browser design.
+              li Refined front end code to work responsively in variety of viewport and device sizes.
+              li Set up a complex Wordpress installation to match the requirements of the site structure.
+              li Integrated HTML and CSS code into a working Wordpress theme.
+              li Continuing support and development ongoing.
 
-          article(class='work')
+          article(class='project')
 
-            h3 5K
-            p Coded both the initial front end code for 5K's new company web site.
+            h3
+              a(href='http://www.weare5k.com') www.weare5k.com
+            ul
+              li Produced front end code using Codekit, SASS and Jade.
+              li Refined front end code to work responsively in variety of viewport and device sizes as required by the designs.
+              li Continuing support and optimisation ongoing following work done to integrate into Wordpress by third party.
 
 
+      section(class='section', id='career-highlights')
+
+        h2 Career Highlights
+
+        div
+
+          article(class='highlight')
+
+            h3 HSBC.
+            p I was hired by Sapient to lead a team of developers producing HTML5 templates for a rebrand of the HSBC.ae website which was carried out by internal CMS developers. This was a challenging role as not only were the deadlines tight, but I had to investigate and determine the best way to handle their requirement for the site to use HTML5.
+
+          article(class='highlight')
+
+            h3 BBC.
+            p I’ve worked on two projects for the BBC, the first was as lead developer at Wilson Fletcher to build the first version of the BBC Trust site. Later in my career I was hired directly as a contractor to act as the developer in charge of creating the new BBC UK China website.
+
+          article(class='highlight')
+
+            h3 Which.
+            p Acted as the lead developer in a team of six at Wilson Fletcher, co-ordinating and producing templates for the new Which website on a year long project to rebrand and integrate their existing sites under one domain.
 
