Added Go project to Latest Work, and added Github link in header

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -26,6 +26,9 @@ html(lang='en')
             span Email:
             a(href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
           li
+            span Github:
+            a(href='https://github.com/Frobitz') www.github.com/Frobitz
+          li
             span Address:
             a(href='http://goo.gl/maps/QKat7') Brighton, UK
 
@@ -81,6 +84,18 @@ html(lang='en')
               li Produced front end code using Codekit, SASS and Jade.
               li Refined front end code to work responsively in variety of viewport and device sizes as required by the designs.
               li Continuing support and optimisation ongoing following work done to integrate into Wordpress by third party.
+
+          article(class='project')
+
+            h3
+              a(href='https://github.com/Frobitz/go') www.github.com/Frobitz/go
+            p A personal project to create a quickstart framework for getting web site and prototype template builds underway quickly.
+            ul
+              li Uses Grunt to compile Jade and SASS into HTML and CSS.
+              li Optimises image files automatically
+              li Integrates Bourbon mixin library to extend SASS
+              li Integrates Neat grid system for quick, responsive layout creation
+              li Currently under development
 
 
       section(class='section', id='career-highlights')
