Added some introductory paragraphs to the projects and highlights sections

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -63,6 +63,8 @@ html(lang='en')
 
         h2 Latest Projects
 
+        p My most recent work, some of which may still be undergoing bug fixes and optimisation work.
+
         div
 
           article(class='project')
@@ -101,6 +103,8 @@ html(lang='en')
       section(class='section', id='career-highlights')
 
         h2 Career Highlights
+
+        p Notable projects I've worked on in the past. I've provided links where the sites still retain the design or code I worked on.
 
         div
 
