Added And Finally section markup

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -123,3 +123,8 @@ html(lang='en')
             h3 Which.
             p Acted as the lead developer in a team of six at Wilson Fletcher, co-ordinating and producing templates for the new Which website on a year long project to rebrand and integrate their existing sites under one domain.
 
+      section(class='section', id='about')
+
+        h2 And finally
+
+        p Iʼm a big music fan and love going to see bands play live - I’m never happier than when I’m up to my knees in mud at a festival. I also enjoy cycling, films and reading books.
