--- a/src/jade/includes/head.jade
+++ b/src/jade/includes/head.jade
@@ -3,7 +3,7 @@
 head
   meta(charset='utf-8')
 
-  title
+  title Richard Cookson - Front End Developer and Interation Designer
 
   meta(name='description', content='')
   meta(name='viewport', content='width=device-width,initial-scale=1')
