Reorganised banner contact information and adusted copy

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -14,23 +14,25 @@ html(lang='en')
       h1 Richard Cookson
       h2 Front end web developer and interaction designer
 
-      div(class='intro')
-        p I've worked in the industry for over fifteen years, producing well organised web sites to the highest standards across a wide range of projects and for numerous high profile organisations. My current focus is on responsive web development and learning Angular.js.
-
       address(class='address')
         ul
           li
-            span Mobile:
+            span Github:
+            a(href='https://github.com/Frobitz') www.github.com/Frobitz
+          li
+            span Phone:
             a(href='tel:+447792871698') +44 7792&nbsp;871698
           li
             span Email:
             a(href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
           li
-            span Github:
-            a(href='https://github.com/Frobitz') www.github.com/Frobitz
-          li
-            span Address:
+            span Location:
             a(href='http://goo.gl/maps/QKat7') Brighton, UK
+
+      div(class='intro')
+        p I've worked in the industry for over fifteen years, producing well organised web sites to the highest standards across a wide range of projects and for numerous high profile organisations. My current focus is on responsive web development and learning Angular.js.
+
+
 
     main(role='main')
 
