Changed map URL for location

--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -27,7 +27,8 @@ html(lang='en')
             a(href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
           li
             span Location:
-            a(href='http://goo.gl/maps/QKat7') Brighton, UK
+            a(href='https://goo.gl/maps/jtqom') Brighton, UK
+
 
       div(class='intro')
         p I've worked in the industry for over fifteen years, producing well organised web sites to the highest standards across a wide range of projects and for numerous high profile organisations. My current focus is on responsive web development and learning Angular.js.
