Reduced width of layout

--- a/src/sass/layout/banner.scss
+++ b/src/sass/layout/banner.scss
@@ -3,6 +3,8 @@
    ========================================================================== */
 
   #banner {
+    @include shift(1);
+    @include span-columns(10);
     margin-bottom:rem(50);
     margin-top:rem(90);
   }
