--- a/src/sass/layout/section.scss
+++ b/src/sass/layout/section.scss
@@ -3,5 +3,7 @@
    ========================================================================== */
 
   .section {
+    @include shift(1);
+    @include span-columns(10);
     margin-bottom:rem(50);
   }
