Copy work on projects

--- a/src/jade/includes/projects.jade
+++ b/src/jade/includes/projects.jade
@@ -12,20 +12,22 @@ section(class='section', id='latest-projects')
         a(href='http://www.lshift.net') www.lshift.net
       p Carried out a full stack web development project to redesign and restructure the existing LShift company web site using Wordpress.
       ul
-        li Utilised Grunt, SASS and Jade framework to create prototype templates allowing for rapid, in-browser design.
-        li Refined front end code to work responsively in variety of viewport and device sizes.
+        li CSS generated with SASS, using the Bourbon mixin library and Neat grid system
+        li Responsive design
+        li Utilised Grunt for task management
+        li Integrated HTML and CSS code into a working Wordpress theme.
         li Set up a complex Wordpress installation to match the requirements of the site structure.
         li Imported and refactored content from the previous verson of the web site.
-        li Integrated HTML and CSS code into a working Wordpress theme.
         li Continuing support and development ongoing.
 
     article(class='project')
 
       h3
         a(href='http://www.weare5k.com') www.weare5k.com
-      p A responsive design project to create the initial one page web site to introduce potential customers to 5K.
+      p A project to create the initial one page web site to introduce potential customers to 5K. It has since been expanded on to add a blog and Wordpress content control.
       ul
-        li Produced front end code using Codekit, SASS and Jade.
+        li CSS generated with SASS, using the Bourbon mixin library and Neat grid system
+        li Responsive design
         li Refined front end code to work responsively in variety of viewport and device sizes as required by the designs.
         li Continuing support and optimisation ongoing following work done to integrate into Wordpress by third party.
 
