Added hcard microformat properties to header

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -1,7 +1,7 @@
-header(id='banner', role='banner')
+header(class='hcard', id='banner', role='banner')
 
-  h1 Richard Cookson
-  h2 Front end web developer and interaction designer
+  h1(class='p-name') Richard Cookson
+  h2(class='p-job-title') Front end web developer and interaction designer
 
   address(class='address')
     ul
@@ -9,10 +9,10 @@ header(id='banner', role='banner')
         span Github:
         a(href='https://github.com/Frobitz') www.github.com/Frobitz
       li
-        span Phone:
+        span(class='p-tel') Phone:
         a(href='tel:+447792871698') +44 7792&nbsp;871698
       li
-        span Email:
+        span(class='u-email') Email:
         a(href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
       li
         span Location:
