--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -6,17 +6,19 @@ header(class='hcard', id='banner', role='banner')
   address(class='address')
     ul
       li
-        span Github:
+        b Github:
         a(href='https://github.com/Frobitz') www.github.com/Frobitz
       li
-        span(class='p-tel') Phone:
+        b(class='p-tel') Phone:
         a(href='tel:+447792871698') +44 7792&nbsp;871698
       li
-        span(class='u-email') Email:
+        b(class='u-email') Email:
         a(href='mailto:rich.cookson@gmail.com') rich.cookson@gmail.com
       li
-        span Location:
-        a(href='https://goo.gl/maps/jtqom') Brighton, UK
+        b Location:
+        a(href='https://goo.gl/maps/jtqom')
+          span(class='p-locality') Brighton, 
+          span(class='p-country-name') UK
 
   div(class='intro')
     p I've worked in the industry for over fifteen years, producing well organised web sites to the highest standards across a wide range of projects and for numerous high profile organisations. My current focus is on responsive web development and learning Angular.js.
