Improved copy in the introduction

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -21,6 +21,6 @@ header(class='hcard', id='banner', role='banner')
           span(class='p-country-name') UK
 
   div(class='intro')
-    p I've worked in the industry for over fifteen years, producing well organised web sites to the highest standards across a wide range of projects and for numerous high profile organisations. My current focus is on responsive web development and learning Angular.js.
-
+    
+    p Hi. I'm Rich, a freelance developer working in Brighton and London. I've over a decade of experience working on projects both large and small for all kinds of organisations, whether in design agencies or directly with clients.
 
