Improved copy in the introduction

--- a/src/jade/includes/header.jade
+++ b/src/jade/includes/header.jade
@@ -22,5 +22,5 @@ header(class='hcard', id='banner', role='banner')
 
   div(class='intro')
     
-    p Hi. I'm Rich, a freelance developer working in Brighton and London. I've over a decade of experience working on projects both large and small for all kinds of organisations, whether in design agencies or directly with clients.
+    p Hi. I'm Rich, a freelance developer working in Brighton and London. I've over a decade of experience working on projects both large and small, whether with design agencies or directly with clients.
 
