--- a/src/jade/includes/skills.jade
+++ b/src/jade/includes/skills.jade
@@ -2,23 +2,24 @@ section(class='section', id='skills')
 
   h2 Skills
 
+  p While I'm primarily a specialist in front end development, over the years I've gained broad experience in a range of technologies. I'm pretty comfortable with the Unix-like command line having set up <b>LAMP</b> servers and worked with <b>Yeoman</b>, <b>Bower</b>, <b>Grunt</b> and <b>Git</b>.
+
   div
 
     article(class='skill')
 
-      h3 HTML.
-      p Producing semantic, minimalist and W3C standards compliant HTML5 markup with experience of working to accessibility coding standards.
-      p I've worked with several templating systems including Smarty and Jade, and have carred out integration of code into a variety of CMS systems including Wordpress.
+      h3 HTML
+      p I strive to produce semantic, minimalist and standards compliant markup where I'm able. In addition I've had extensive experience working to high accessibility standards, and have a good knowledge of localisation issues gained largely from my time at the BBC World Service.
+      p Beyond simply coding markup, I've worked with a variety of templating systems and CMS theme engines to integrate my code into production environments.
 
     article(class='skill')
 
-      h3 CSS.
-      p Coded plain CSS for years with an indepth knowledge of working around the rendering quirks of various browsers.
-      p Currently I work with the SASS pre-processor, using Bourbon and Neat mixin libraries.
-      p I use the SMACSS methodology of organising CSS code.
+      h3 CSS
+      p I produce CSS to the <b>SMACSS</b> methodology, utilising the <b>SASS</b> pre-processor and mixin libraries such as <b>Bourbon</b> and <b>Neat</b>. I've recent experience with responsive web design projects and mobile first development.
+      p My experience with CSS dates back to the days of IE5, and I've worked around innumerable browser bugs, quirks and inconsistencies over the years.
 
     article(class='skill')
 
-      h3 JavaScript.
-      p Competent JavaScript coder utilising the jQuery library for various user interface enhancements and functionality.
-      p Currently working on an Angular.js project to improve OOP JavaScript skills.
+      h3 JavaScript
+      p I'm a competent JavaScript coder mainly working with the <b>jQuery</b> library and developing plugins for various user interface enhancements for web sites.
+      p I don't currently consider myself a web application developer, although I'm working on an <b>Angular.js</b> side project to broaden my capabilties.
