Improvements to projects copy

--- a/src/jade/includes/projects.jade
+++ b/src/jade/includes/projects.jade
@@ -12,9 +12,9 @@ section(class='section', id='latest-projects')
         a(href='http://www.lshift.net') www.lshift.net
       p Carried out a full stack web development project to redesign and restructure the existing LShift company web site using Wordpress.
       ul
-        li CSS generated with SASS, using the Bourbon mixin library and Neat grid system
-        li Responsive design
-        li Utilised Grunt for task management
+        li CSS generated with SASS, using the Bourbon mixin library and Neat grid system.
+        li Responsive design.
+        li Utilised Grunt for task management.
         li Integrated HTML and CSS code into a working Wordpress theme.
         li Set up a complex Wordpress installation to match the requirements of the site structure.
         li Imported and refactored content from the previous verson of the web site.
@@ -26,8 +26,8 @@ section(class='section', id='latest-projects')
         a(href='http://www.weare5k.com') www.weare5k.com
       p A project to create the initial one page web site to introduce potential customers to 5K. It has since been expanded on to add a blog and Wordpress content control.
       ul
-        li CSS generated with SASS, using the Bourbon mixin library and Neat grid system
-        li Responsive design
+        li CSS generated with SASS, using the Bourbon mixin library and Neat grid system.
+        li Responsive design.
         li Refined front end code to work responsively in variety of viewport and device sizes as required by the designs.
         li Continuing support and optimisation ongoing following work done to integrate into Wordpress by third party.
 
@@ -38,7 +38,8 @@ section(class='section', id='latest-projects')
       p A personal project to create a quickstart framework for getting web site and prototype template builds underway quickly.
       ul
         li Uses Grunt to compile Jade and SASS into HTML and CSS.
-        li Optimises image files automatically
-        li Integrates Bourbon mixin library to extend SASS
-        li Integrates Neat grid system for quick, responsive layout creation
-        li Currently under development
+        li Provides a local server for projects with live reload functionality.
+        li Optimises image files automatically.
+        li Integrates Bourbon mixin library to extend SASS.
+        li Integrates Neat grid system for quick, responsive layout creation.
+        li Currently under development.
