Copy improvements to projects

--- a/src/jade/includes/projects.jade
+++ b/src/jade/includes/projects.jade
@@ -2,7 +2,7 @@ section(class='section', id='latest-projects')
 
   h2 Latest Projects
 
-  p My most recent work, some of which may still be undergoing bug fixes and optimisation work.
+  p These are my most recent pieces of work. I'm still working on them to some extent, whether that involves bug fixes, optimisation work or design refinements.
 
   div
 
@@ -10,7 +10,7 @@ section(class='section', id='latest-projects')
 
       h3
         a(href='http://www.lshift.net') www.lshift.net
-      p Carried out a full stack web development project to redesign and restructure the existing LShift company web site using Wordpress.
+      p A full stack web development project to redesign and restructure the existing LShift company web site using Wordpress.
       ul
         li CSS generated with SASS, using the Bourbon mixin library and Neat grid system.
         li Responsive design.
@@ -24,7 +24,7 @@ section(class='section', id='latest-projects')
 
       h3
         a(href='http://www.weare5k.com') www.weare5k.com
-      p A project to create the initial one page web site to introduce potential customers to 5K. It has since been expanded on to add a blog and Wordpress content control.
+      p A one page web site to introduce potential customers to 5K, replacing a simple placeholder site. It has since been expanded on to add a blog and Wordpress content control so there's some optimisation and integration problems to be ironed out.
       ul
         li CSS generated with SASS, using the Bourbon mixin library and Neat grid system.
         li Responsive design.
